--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/font-awesome.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <title>Ivana Braz Portfolio</title>
+    <title>Ivana Braz Portfolio TEST</title>
 </head>
 
 
