--- a/pages/resume.html
+++ b/pages/resume.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta name="description" content="Portfolio de Ivana Braz">
+    <meta name="keywords" content="PORTFOLIO, GRAPHIC DESIGN, WEB DESIGN">
+
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="../css/styles.css" />
 
@@ -24,7 +27,7 @@
     <header id="header">
         <nav class="navbar navbar-expand-lg navbar-light justify-content-center p-5">
             <div class="container">
-                <a href="../index.html" class="navbar-brand d-flex w-50 me-auto"><img src="../images/logo2.svg" alt="Ivana Braz logo" class="w-25"></a>
+                <a href="../index.html" class="navbar-brand d-flex w-50 me-auto"><img src="../images/logo2.svg" alt="Ivana Braz logo" class="nav-logo w-25"></a>
                 <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapsingNavbar3">
                     <span class="navbar-toggler-icon"></span>
                 </button>
